@@ -12,6 +12,8 @@ Version 0.3q
 * You can no longer become pregnant from lizard tails.
 * Fuckhuge terry pitch vaginal scene done. Like, huge. 16k words.
 * Jeanne can now craft some alchemy items that can change your gender.
+* You need some ingredients first though.
+ - Spring water can be found in the forest.
 
 --------------------------------------------
              PREVIOUS VERSIONS
